fixed scrollbar issue for timeline panel

--- a/app/styl/style.styl
+++ b/app/styl/style.styl
@@ -112,7 +112,7 @@ body
   display: block
   float: left
   height: 30px;
-  position: absolute
+  position: relative
   left: 40px
   right: 240px
 
